[tool.poetry]
name = "agent"
version = "0.0.1"
description = ""
authors = ["Michael Reed <1062477+haywood@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.2.0"
llama-cpp-python = "^0.2.60"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
